refactor: move models and dtos to separate packages