@@ -30,8 +30,8 @@ import org.springframework.data.jpa.domain.Specification;
 import com.github.malyshevhen.exceptions.EntityAlreadyExistsException;
 import com.github.malyshevhen.exceptions.EntityNotFoundException;
 import com.github.malyshevhen.exceptions.UserValidationException;
-import com.github.malyshevhen.models.DateRange;
-import com.github.malyshevhen.models.User;
+import com.github.malyshevhen.domain.dto.DateRange;
+import com.github.malyshevhen.domain.models.User;
 import com.github.malyshevhen.repositories.UserRepository;
 
 import com.github.malyshevhen.configs.UserConstraints;
@@ -99,7 +99,7 @@ public class UserServiceImplTest {
 
         assertNotNull(result);
         assertEquals(1, result.getTotalElements());
-        assertEquals(user, result.getContent().get(0));
+        assertEquals(user, result.getContent().getFirst());
     }
 
     @DisplayName("Test get user by id returns user")
